unpackaged/main/default/objects/OrderApi__Invoice_Line__c/OrderApi__Invoice_Line__c.object-meta.xml
<CustomObject>
    <description>Invoice Lines hold the detail for a Invoice.</description>
    <label>Invoice Line</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Invoice Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>