unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Adjustment_Reason__c</fullName>
    <description>Select the reason for the adjustment.</description>
    <inlineHelpText>Select the reason for the adjustment.</inlineHelpText>
    <label>Adjustment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Pricing Applied</fullName>
            </value>
            <value>
                <fullName>Manager Override</fullName>
            </value>
            <value>
                <fullName>Customer Loyalty Discount</fullName>
            </value>
            <value>
                <fullName>Misc. Adjustments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>