unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Adjustments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Adjustments__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Sum of all adjustments, both positive and negative, applied to this invoice line.</description>
    <inlineHelpText>Sum of all adjustments, both positive and negative, applied to this invoice line.</inlineHelpText>
    <label>Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>