unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Credit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>*System Calculated/Override* Link to the Credit Note that was generated from Invoice Line.</description>
    <inlineHelpText>*System Calculated/Override* Link to the Credit Note that was generated from Invoice Line.</inlineHelpText>
    <label>Credit Note</label>
    <referenceTo>OrderApi__Credit_Note__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>