unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Credits_Applied__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Credits_Applied__c</fullName>
    <defaultValue>0</defaultValue>
    <description>**System Calculated/Override** Sum of all payments received using credits on the account for the Invoice Line.</description>
    <inlineHelpText>**System Calculated/Override** Sum of all payments received using credits on the account received for the Invoice Line.</inlineHelpText>
    <label>Credits Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>