unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Deferred_Revenue_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Deferred_Revenue_Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Creates Deferred Revenue adjustments when checked for Adjustments.</description>
    <inlineHelpText>Creates Deferred Revenue adjustments when checked for Adjustments.</inlineHelpText>
    <label>Deferred Revenue Adjustment</label>
    <type>Checkbox</type>
</CustomField>