unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__GL_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Required/Override** Link to the related GL Account.</description>
    <inlineHelpText>**System Calculated/Required/Override** Link to the related GL Account.</inlineHelpText>
    <label>GL Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>