unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Invoice__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice__c</fullName>
    <description>**Required** All Invoice Lines require a linked Invoice.</description>
    <inlineHelpText>**Required** All Invoice Lines require a linked Invoice.</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>OrderApi__Invoice__c</referenceTo>
    <relationshipName>Invoice_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>