unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated for adjustments, this field relates the invoice line to a parent invoice line.</description>
    <inlineHelpText>Populated for adjustments, this field relates the invoice line to a parent invoice line.</inlineHelpText>
    <label>Parent Invoice Line</label>
    <referenceTo>OrderApi__Invoice_Line__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>