unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Is_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the system will not the consider the line in inventory calculations. Adjustment lines are the only type of lines that can be added to invoices w/o payments that have posted.</description>
    <inlineHelpText>When checked, the system will not the consider the line in inventory calculations. Adjustment lines are the only type of lines that can be added to invoices w/o payments that have posted.</inlineHelpText>
    <label>Is Adjustment</label>
    <type>Checkbox</type>
</CustomField>