unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Is_Child_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Child_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field was created as a system field to assist in the calculation of adjustments on the Invoice object.</description>
    <inlineHelpText>This field was created as a system field to assist in the calculation of adjustments on the Invoice object.</inlineHelpText>
    <label>DEPRECATED</label>
    <type>Checkbox</type>
</CustomField>