unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Is_Posted__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**Only use for Invoice Line Adjustments related to Posted Invoices** When checked, the adjustment line is posted and a Transaction is created in the system.</description>
    <inlineHelpText>**Only use for Invoice Line Adjustments related to Posted Invoices** When checked, the adjustment line is posted and a Transaction is created in the system.</inlineHelpText>
    <label>Is Posted</label>
    <type>Checkbox</type>
</CustomField>