unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Is_Renewal__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, related Invoice Line is considered as &quot;Subscription Renewal&quot;.</description>
    <inlineHelpText>When checked, related Invoice Line is considered as &quot;Subscription Renewal&quot;.</inlineHelpText>
    <label>Is Renewal</label>
    <type>Checkbox</type>
</CustomField>