unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Line_Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Line_Description__c</fullName>
    <description>Optional line description will be added to invoices, receipts, and detailed customer statements. If blank, the value of this field will match the value of the related item&#39;s &quot;Receipt Description&quot; field.</description>
    <inlineHelpText>Optional line description will be added to invoices, receipts, and detailed customer statements. If blank, the value of this field will match the value of the related item&#39;s &quot;Receipt Description&quot; field.</inlineHelpText>
    <label>Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>