unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Parent_Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Parent_Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated** Link to the related Parent Sales Order Line.</description>
    <inlineHelpText>**System Calculated** Link to the related Parent Sales Order Line.</inlineHelpText>
    <label>Parent Sales Order Line</label>
    <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
    <relationshipName>Child_Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>