unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Payment_Priority__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Priority__c</fullName>
    <description>If populated, this field is used to identify the order in which partial payments are applied to an invoice.</description>
    <inlineHelpText>If populated, this field is used to identify the order in which partial payments are applied to an invoice.</inlineHelpText>
    <label>Payment Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>