unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Posted_Date__c</fullName>
    <description>**System Calculated** Valid for adjustments only. Default is blank, populates with the current date&#39;s value when a line is flagged as &quot;Is Adjustment&quot; and &quot;Is Posted&quot;.</description>
    <inlineHelpText>**System Calculated** Valid for adjustments only. Default is blank, populates with the current date&#39;s value when a line is flagged as &quot;Is Adjustment&quot; and &quot;Is Posted&quot;.</inlineHelpText>
    <label>Posted Date (Adjustment)</label>
    <type>Date</type>
</CustomField>