unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Price_Rule__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Price_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The price rule related to the invoice line. When added or changed, the unit price will reflect the price defined on the price rule.</description>
    <inlineHelpText>The price rule related to the invoice line. When added or changed, the unit price will reflect the price defined on the price rule.</inlineHelpText>
    <label>Price Rule</label>
    <referenceTo>OrderApi__Price_Rule__c</referenceTo>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>