unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Quantity__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The quantity of Items to include on the Invoice Detail. Required if the Item does not have &quot;Disable Price Rules&quot; checked. Default 1.</description>
    <inlineHelpText>The quantity of Items to include on the Invoice Detail. Required if the Item does not have &quot;Disable Price Rules&quot; checked. Default 1.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>