unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sale_Price__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>**System Calculated/Override** The price per-unit for the item sold on the invoice line.</description>
    <inlineHelpText>**System Calculated/Override** The price per-unit for the item sold on the invoice line.</inlineHelpText>
    <label>Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>