unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Shipping_Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Shipping_Contact__c</fullName>
    <description>Optional shipping contact for the item&#39;s ordered on the invoice line. If left blank, the value of this field will be updated with the value of the parent invoice&#39;s &quot;Shipping Contact&quot; field.</description>
    <inlineHelpText>Optional shipping contact for the item&#39;s ordered on the invoice line. If left blank, the value of this field will be updated with the value of the parent invoice&#39;s &quot;Shipping Contact&quot; field.</inlineHelpText>
    <label>Shipping Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>