unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Shipping_Postal_Code__c</fullName>
    <description>Optional shipping postal code for the item&#39;s ordered on the invoice line. If left blank, the value of this field will be updated with the value of the parent invoice&#39;s &quot;Shipping Postal Code&quot; field.</description>
    <inlineHelpText>Optional shipping postal code for the item&#39;s ordered on the invoice line. If left blank, the value of this field will be updated with the value of the parent invoice&#39;s &quot;Shipping Postal Code&quot; field.</inlineHelpText>
    <label>Shipping Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>