unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Tax_Override__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Tax_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to override any tax calculations by the system.</description>
    <inlineHelpText>This field is used to override any tax calculations by the system.</inlineHelpText>
    <label>Tax Override</label>
    <type>Checkbox</type>
</CustomField>