unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/OrderApi__Total__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Total__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>**System Calculated/Override** Quantity * Sale Price</description>
    <inlineHelpText>**System Calculated/Override** Quantity * Sale Price</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>