unpackaged/main/default/objects/OrderApi__Invoice_Line__c/fields/Registrant__c.field-meta.xml
<CustomField>
    <fullName>Registrant__c</fullName>
    <formula>OrderApi__Sales_Order_Line__r.EventApi__Attendee__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registrant</label>
    <type>Text</type>
</CustomField>